variables.RunFour.scala.error
Erreur de compilation :
RunFour:3: error: '(' expected but identifier found.
  if estSurBiscuit()==true{
     ^RunFour:7: error: illegal start of simple expression
} 
^